redmine-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
        - image: bitnami/redmine:4.1.1
          name: redmine
          ports:
          - containerPort: 3000
            protocol: TCP
