ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redmine-ingress
spec:
  rules:
  - host: my-host.local 
    http:
      paths:
      - backend:
          serviceName: redmine
          servicePort: 3000
